force-app/main/default/objects/Facility_Mapper__c/Facility_Mapper__c.object-meta.xml
<CustomObject>
    <label>Facility Mapper</label>
    <nameField>
        <label>Facility Mapper Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facility Mappers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>