force-app/main/default/objects/Facility_Mapper__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Facility Mappers</relationshipLabel>
    <relationshipName>Facility_Mappers</relationshipName>
    <type>Lookup</type>
</CustomField>