force-app/main/default/objects/Facility_Mapper__c/fields/Non_Lumina__c.field-meta.xml
<CustomField>
    <fullName>Non_Lumina__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Lumina</label>
    <type>Checkbox</type>
</CustomField>