force-app/main/default/objects/Facility_Mapper__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source_Name__c</columns>
    <columns>Facility__c</columns>
    <columns>Non_Lumina__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>